src/components/Catalog.css
.catalog__hint {
    padding: 0.8em !important;
    border-radius: 10px;
}

.catalog__hint .pf-c-hint__body {
    font-size: 0.9em;
}

.catalog__step {
    border-radius: 15px;
    cursor: grab;
}

.catalog__stepImage {
    height: 75px;
    width: 75px;
    align-items: center;
    border-right: 1px solid #DDDDDD;
    justify-content: center;
    padding: 15px;
    position: relative;
}

/* MINI CATALOG */

/* Mini Catalog Search */
.miniCatalog__search.pf-c-toolbar__item {
    width: 100%;
}

/* Mini Catalog Step (from list) */
button.miniCatalog__stepItem.pf-c-button.pf-m-tertiary {
    --pf-c-button--after--BorderColor: transparent;
    width: 100%;
}

button.miniCatalog__stepItem:hover {
    background: #F5F5F5;
}

.miniCatalog__stepItem__grid {
    line-height: 40px;
    padding: 2px;
}

.miniCatalog__stepImage {
    height: 40px;
    width: 40px;
    padding: 0 5px;
}

